--- a/movies.html
+++ b/movies.html
@@ -3,6 +3,7 @@
 <head>
 	<title>My Favorite Things: Movies</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 	<div class="jumbotron">
